@@ -1,1 +1,5 @@
 # large-file-reading-challenge
+
+To run the application:
+It is required to add VM options: --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+and add a file path in application.yaml
